--- a/html-css alura/passo01/index.html
+++ b/html-css alura/passo01/index.html
@@ -23,7 +23,7 @@
                 <button><a href=""><img src="./Assets-aula2-curso3-html-e-css-main/assets/github.png" alt="">Github</a></button>
             </div>
         </section>
-        <img src="./imagens/Imagem.png" alt="">
+        <img src="./imagens/Imagem.png" alt="" class="img">
     </main>
     
 </body>
