--- a/Alura books/index.html
+++ b/Alura books/index.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura books</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500; 700&display-swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="container__menu">
+            <div>
+                <input type="checkbox" id="menu" class="container__botao">
+                    <label for="menu">
+                   <span class="menu__hamburguer"></span>
+                  </label>
+                    <ul class="lista-menu">
+                        <li class="lista-menu__titulo">Categorias</li>
+                        <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Programação</a>
+                         </li>
+                         <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Front-end</a>
+                         </li>
+                         <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Infraestrutura</a>
+                         </li>
+                         <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Business</a>
+                         </li>
+                         <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Design & UX</a>
+                         </li>
+                    </ul>
+                <img src="./imgs/Logo.svg" alt="">
+            </div>
+            <div>
+                <img src="./imgs/Favoritos.svg" alt="">
+                <img src="./imgs/Compras.svg" alt="">
+                <img src="./imgs/Usuario.svg" alt="">
+            </div>
+        </section>
+        <section class="container__pesquisa">
+            <h2>Já sabe por onde começar?</h2>
+            <p class="texto_pesquisa">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+            <div class="botao_pesquisa">
+                <img src="./imgs/Lupa.svg" alt="">
+                <p>Qual será sua próxima leitura?</p>
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="container container__primaria">
+            <h1>ÚLTIMOS LANÇAMENTOS</h1>
+        </section>
+    </main>
 </body>
 </html>
