--- a/Alura books/index.html
+++ b/Alura books/index.html
@@ -36,10 +36,37 @@
                               <a href="#" class="lista-menu__link">Design & UX</a>
                          </li>
                     </ul>
-                <img src="./imgs/Logo.svg" alt="">
+                    <img src="./imgs/Logo.svg" alt="">
+                    <h2 class="nome_site"><strong>Alura</strong>Books</h2>
             </div>
-            <div>
-                <img src="./imgs/Favoritos.svg" alt="">
+            <ul class="opcoes">
+                <input type="checkbox" class="opção_botao" id="opções_menu">
+                <label for="opções_menu">
+                <li class="item_opcao">Categoria</li>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu__item">
+                          <a href="#" class="lista-menu__link">Programação</a>
+                     </li>
+                     <li class="lista-menu__item">
+                          <a href="#" class="lista-menu__link">Front-end</a>
+                     </li>
+                     <li class="lista-menu__item">
+                          <a href="#" class="lista-menu__link">Infraestrutura</a>
+                     </li>
+                     <li class="lista-menu__item">
+                          <a href="#" class="lista-menu__link">Business</a>
+                     </li>
+                     <li class="lista-menu__item">
+                          <a href="#" class="lista-menu__link">Design & UX</a>
+                     </li>
+                </ul>
+                <li class="item_opcao"><a href="" class="opcoes_link">Favoritos</a></li>
+                <li class="item_opcao"><a href="" class="opcoes_link">Minha estante</a></li>
+                
+            </ul>
+            <div class="img_header">
+                <img src="./imgs/Favoritos.svg" alt="" class="img_laptop">
                 <img src="./imgs/Compras.svg" alt="">
                 <img src="./imgs/Usuario.svg" alt="">
             </div>
@@ -144,14 +171,89 @@
             </div>
         </section>
         <section class="container__novidades">
-            <h2>Fique por dentro das novidades!</h2>
-            <p>Atualizações de e-books, novos livros, promoções e outros.</p>
+            <div>
+                <h2>Fique por dentro das novidades!</h2>
+                <p>Atualizações de e-books, novos livros, promoções e outros.</p>
+            </div>
             <input type="search" class="botao_novidades" placeholder="Cadastre seu e-mail">
         </section>
     </main>
     <hr>
     <footer>
         <h2>Grupo alura</h2>
+        <ul class="lista_footer">
+            <li class="lista_titulo">Educação</li>
+            <li class="lista_item">
+                <img src="./imgs/Caelum.svg" alt="">
+                <a href="" class="lista_link">Caelum</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/CasaDoCodigo.svg" alt="">
+                <a href="" class="lista_link">Casa do código</a>
+            </li>
+        </ul>
+        <ul class="lista_footer">
+            <li class="lista_titulo">Educação Online</li>
+            <li class="lista_item">
+                <img src="./imgs/Alura.svg" alt="">
+                <a href="" class="lista_link">Alura</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/AluraEmpresas.svg" alt="">
+                <a href="" class="lista_link">Alura para empresas</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/CasaDoCodigo.svg" alt="">
+                <a href="" class="lista_link">Casa do código</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/AluraLATAM.svg" alt="">
+                <a href="" class="lista_link">Alura LATAM</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/AluraStart.svg" alt="">
+                <a href="" class="lista_link">Alura Start</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/MusicDot.svg" alt="">
+                <a href="" class="lista_link">MusicDot</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/PM3.svg" alt="">
+                <a href="" class="lista_link">PM3</a>
+            </li>
+        </ul>
+        <ul class="lista_footer">
+            <li class="lista_titulo">Comunidade</li>
+            <li class="lista_item">
+                <img src="./imgs/HipstersTech.svg" alt="">
+                <a href="" class="lista_link">Hipsters ponto Tech</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/ScubaDev.svg" alt="">
+                <a href="" class="lista_link">Scuba Dev</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/LayersTech.svg" alt="">
+                <a href="" class="lista_link">Layers ponto Tech</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/LikeABoss.svg" alt="">
+                <a href="" class="lista_link">Like a Boss</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/CarreiraSemFronteira.svg" alt="">
+                <a href="" class="lista_link">Carreira sem Fronteira</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/HipstersJobs.svg" alt="">
+                <a href="" class="lista_link">Hipsters ponto Jobs</a>
+            </li>
+            <li class="lista_item">
+                <img src="./imgs/GUJ.svg" alt="">
+                <a href="" class="lista_link">GUJ</a>
+            </li>
+        </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
