--- a/Alura books/index.html
+++ b/Alura books/index.html
@@ -15,7 +15,7 @@
         <section class="container__menu">
             <div>
                 <input type="checkbox" id="menu" class="container__botao">
-                    <label for="menu">
+                    <label for="menu" class="label">
                    <span class="menu__hamburguer"></span>
                   </label>
                     <ul class="lista-menu">
@@ -37,38 +37,42 @@
                          </li>
                     </ul>
                     <img src="./imgs/Logo.svg" alt="">
-                    <h2 class="nome_site"><strong>Alura</strong>Books</h2>
-            </div>
-            <ul class="opcoes">
-                <input type="checkbox" class="opção_botao" id="opções_menu">
-                <label for="opções_menu">
-                <li class="item_opcao">Categoria</li>
-                </label>
-                <ul class="lista-menu">
-                    <li class="lista-menu__item">
-                          <a href="#" class="lista-menu__link">Programação</a>
-                     </li>
-                     <li class="lista-menu__item">
-                          <a href="#" class="lista-menu__link">Front-end</a>
-                     </li>
-                     <li class="lista-menu__item">
-                          <a href="#" class="lista-menu__link">Infraestrutura</a>
-                     </li>
-                     <li class="lista-menu__item">
-                          <a href="#" class="lista-menu__link">Business</a>
-                     </li>
-                     <li class="lista-menu__item">
-                          <a href="#" class="lista-menu__link">Design & UX</a>
-                     </li>
-                </ul>
-                <li class="item_opcao"><a href="" class="opcoes_link">Favoritos</a></li>
-                <li class="item_opcao"><a href="" class="opcoes_link">Minha estante</a></li>
-                
-            </ul>
+                        <div>
+                            <h2 class="nome_site"><strong>Alura</strong>Books</h2>
+                        </div>
+                                    <ul class="opcoes">
+                                        <input type="checkbox" class="opção_botao" id="opções_menu">
+                                        <label for="opções_menu" class="opções_menu">
+                                        <li class="item_opcao"><p class="categoria">Categoria</p></li>
+                                        </label>
+                                        <ul class="lista-menu">
+                        <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Programação</a>
+                         </li>
+                         <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Front-end</a>
+                         </li>
+                         <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Infraestrutura</a>
+                         </li>
+                         <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Business</a>
+                         </li>
+                         <li class="lista-menu__item">
+                              <a href="#" class="lista-menu__link">Design & UX</a>
+                         </li>
+                                        </ul>
+                                        <li class="item_opcao"><a href="" class="opcoes_link">Favoritos</a></li>
+                                        <li class="item_opcao"><a href="" class="opcoes_link">Minha estante</a></li>
+                                        
+                                    </ul>
+                    </div>
             <div class="img_header">
                 <img src="./imgs/Favoritos.svg" alt="" class="img_laptop">
                 <img src="./imgs/Compras.svg" alt="">
+                <p>Minha sacola</p>
                 <img src="./imgs/Usuario.svg" alt="">
+                <p>Meu perfil</p>
             </div>
         </section>
         <section class="container__pesquisa">
@@ -81,93 +85,99 @@
         <section class="container container__primaria">
             <h1>ÚLTIMOS LANÇAMENTOS</h1>
             <!-- Slider main container -->
-    <div class="swiper">
-        <!-- Additional required wrapper -->
-        <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
-        <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide"><img src="./imgs/ApacheKafka.svg"alt="Livro sobre apache kafka e spring boot da alura books"></div>
-            <div class="swiper-slide"><img src="./imgs/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
-            <div class="swiper-slide"><img src="./imgs/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks"></div>
-            <div class="swiper-slide"><img src="./imgs/Guia Front-end.svg" alt="Livro Guia front end"></div>
-            <div class="swiper-slide"><img src="./imgs/Portugol.svg" alt="Livro sobre portugol"></div>
-            <div class="swiper-slide"><img src="./imgs/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
-        </div>
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-    </div>
-    <div class="container__card">
-        <div class="primeiro_card">
-            <div>
-            <h3 class="primeiro_texto">Talvez você também se interesse por...</h3>
-            <h2 class="segundo_texto">Angular 11 e Firebase</h2>
-            <p class="terceiro_texto">Construindo uma aplicação integrada com a plataforma do Google.</p> 
+    <div class="section_desktop">
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="./imgs/ApacheKafka.svg"alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                <div class="swiper-slide"><img src="./imgs/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="./imgs/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks"></div>
+                <div class="swiper-slide"><img src="./imgs/Guia Front-end.svg" alt="Livro Guia front end"></div>
+                <div class="swiper-slide"><img src="./imgs/Portugol.svg" alt="Livro sobre portugol"></div>
+                <div class="swiper-slide"><img src="./imgs/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
             </div>
-            <img src="./imgs/Angular.svg" alt="">
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
-        <div class="card_botao">
-            <ul class="botoes">
-                <li><img src="./imgs/Favoritos.svg" alt=""></li>
-                <li><img src="./imgs/Compras.svg" alt=""></li>
-            </ul>
-            <a href="" class="ancora">Saiba mais</a>
+        <div class="container__card">
+            <div class="primeiro_card">
+                <div>
+                <h3 class="primeiro_texto">Talvez você também se interesse por...</h3>
+                <h2 class="segundo_texto">Angular 11 e Firebase</h2>
+                <p class="terceiro_texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <img src="./imgs/Angular.svg" alt="">
+            </div>
+            <div class="card_botao">
+                <ul class="botoes">
+                    <li><img src="./imgs/Favoritos.svg" alt=""></li>
+                    <li><img src="./imgs/Compras.svg" alt=""></li>
+                </ul>
+                <a href="" class="ancora">Saiba mais</a>
+            </div>
         </div>
     </div>
         </section>
         <section class="container container__primaria">
             <h1>MAIS VENDIDOS</h1>
             <!-- Slider main container -->
-    <div class="swiper">
-        <!-- Additional required wrapper -->
-        <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
-        <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide"><img src="./imgs/ApacheKafka.svg"alt="Livro sobre apache kafka e spring boot da alura books"></div>
-            <div class="swiper-slide"><img src="./imgs/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
-            <div class="swiper-slide"><img src="./imgs/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks"></div>
-            <div class="swiper-slide"><img src="./imgs/Guia Front-end.svg" alt="Livro Guia front end"></div>
-            <div class="swiper-slide"><img src="./imgs/Portugol.svg" alt="Livro sobre portugol"></div>
-            <div class="swiper-slide"><img src="./imgs/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
-        </div>
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-    </div>
-    <div class="container__card">
-        <div class="primeiro_card">
-            <div>
-                <img src="./imgs/Estrelinhas.svg" alt="">
-            <h3 class="primeiro_texto">Autora do Mês</h3>
-            <h2 class="segundo_texto">Juliana Agarikov</h2>
-            <p class="terceiro_texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p> 
+    <div class="section_desktop">
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="./imgs/ApacheKafka.svg"alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                <div class="swiper-slide"><img src="./imgs/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="./imgs/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks"></div>
+                <div class="swiper-slide"><img src="./imgs/Guia Front-end.svg" alt="Livro Guia front end"></div>
+                <div class="swiper-slide"><img src="./imgs/Portugol.svg" alt="Livro sobre portugol"></div>
+                <div class="swiper-slide"><img src="./imgs/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
             </div>
-            <img src="./imgs/Escritora.svg" alt="">
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
-        <div class="card_botao">
-            <ul class="botoes">
-                <li><img src="./imgs/Favoritos.svg" alt=""></li>
-                <li><img src="./imgs/Compras.svg" alt=""></li>
-            </ul>
-            <a href="" class="ancora">Saiba mais</a>
+        <div class="container__card">
+            <div class="primeiro_card">
+                <div>
+                    <img src="./imgs/Estrelinhas.svg" alt="">
+                <h3 class="primeiro_texto">Autora do Mês</h3>
+                <h2 class="segundo_texto">Juliana Agarikov</h2>
+                <p class="terceiro_texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                </div>
+                <img src="./imgs/Escritora.svg" alt="">
+            </div>
+            <div class="card_botao">
+                <ul class="botoes">
+                    <li><img src="./imgs/Favoritos.svg" alt=""></li>
+                    <li><img src="./imgs/Compras.svg" alt=""></li>
+                </ul>
+                <a href="" class="ancora">Saiba mais</a>
+            </div>
         </div>
     </div>
         </section>
         <section class="container__topico">
-            <h2 class="titulo_topico">TÓPICOS VISITADOS RECENTEMENTE</h2>
-            <div>
-                <ul class="topicos">
-                    <li><a href="" class="ancora_topico">Android</a></li>
-                    <li><a href="" class="ancora_topico">Marketing Digital</a></li>
-                    <li><a href="" class="ancora_topico">Agile</a></li>
-                    <li><a href="" class="ancora_topico">Startups</a></li>
-                    <li><a href="" class="ancora_topico">HTML & CSS</a></li>
-                    <li><a href="" class="ancora_topico">Python</a></li>
-                    <li><a href="" class="ancora_topico">OO</a></li>
-                    <li><a href="" class="ancora_topico">Java</a></li>
-                </ul>
+            <div class="topico_desktop">
+                <h2 class="titulo_topico">TÓPICOS VISITADOS RECENTEMENTE</h2>
+                <div>
+                    <ul class="topicos">
+                        <li><a href="" class="ancora_topico">Android</a></li>
+                        <li><a href="" class="ancora_topico">Marketing Digital</a></li>
+                        <li><a href="" class="ancora_topico">Agile</a></li>
+                        <li><a href="" class="ancora_topico">Startups</a></li>
+                        <li><a href="" class="ancora_topico">HTML & CSS</a></li>
+                        <li><a href="" class="ancora_topico">Python</a></li>
+                        <li><a href="" class="ancora_topico">OO</a></li>
+                        <li><a href="" class="ancora_topico">Java</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section class="container__novidades">
@@ -181,6 +191,7 @@
     <hr>
     <footer>
         <h2>Grupo alura</h2>
+        <hr>
         <ul class="lista_footer">
             <li class="lista_titulo">Educação</li>
             <li class="lista_item">
@@ -192,6 +203,7 @@
                 <a href="" class="lista_link">Casa do código</a>
             </li>
         </ul>
+        <hr>
         <ul class="lista_footer">
             <li class="lista_titulo">Educação Online</li>
             <li class="lista_item">
@@ -223,6 +235,7 @@
                 <a href="" class="lista_link">PM3</a>
             </li>
         </ul>
+        <hr>
         <ul class="lista_footer">
             <li class="lista_titulo">Comunidade</li>
             <li class="lista_item">
