--- a/challenge 01/index.html
+++ b/challenge 01/index.html
@@ -34,14 +34,15 @@
                 <input type="text" name="projeto" id="projeto" placeholder="Descrição do projeto">
             </form>
         </section>
-        <section>
-            <h3>Personalização</h3>
+        <section class="container__perso">
+            <p>Personalização</p>
                 <select id="opcoes" name="opcoes">
                     <option value="opcao1">JavaScript</option>
-                    <option value="opcao2">Opção 2</option>
-                    <option value="opcao3">Opção 3</option>
+                    <option value="opcao2">HTML</option>
+                    <option value="opcao3">CSS</option>
                 </select>
-                <input type="submit" value="Salvar projeto">
+                <input type="color" name="" id="" class="cor">
+                <input type="submit" value="Salvar projeto" class="botao-salvar">
         </section>
     </main>
 </body>
