--- a/arquitetura-css-assets/index.html
+++ b/arquitetura-css-assets/index.html
@@ -8,6 +8,71 @@
         <title>Fruta & Fruto</title>
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./assets/css/header.css">
     </head>
-    <body></body>
+    <body>
+        <header class="cabecalho">
+            <img class="logo" src="./assets/img/logo.jpg" alt="">
+            <nav class="menu">
+                <ul class="menu-lista">
+                    <li class="menu-item"><a class="menu-link ativo" href="" id="ativo">Inicio</a></li>
+                    <li class="menu-item"><a class="menu-link" href="">receitas</a></li>
+                    <li class="menu-item"><a class="menu-link" href="">quem somos</a></li>
+                    <li class="menu-item"><a class="menu-link" href="">comunidade</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <img src="./assets/img/banner.jpg" alt="">
+                <h1>Reaproveite melhor os alimentos!</h1>
+                <h2>Receitas para economizar e ganhar saúde</h2>
+                <p>Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+            </section>
+            <section>
+                <div>
+                    <img src="./assets/img/receitas/tigela-de-abacate.jpg" alt="">
+                    <h3>Tigela de abacate</h3>
+                    <p>Receita refrescante e cheia de vitaminas para seu café da manhã</p>
+                </div>
+                <div>
+                    <img src="./assets/img/receitas/salada-de-kiwi.jpg" alt="">
+                    <h3>Salada de kiwi</h3>
+                    <p>Receita refrescante e cheia de vitaminas para seu café da manhã</p>
+                </div>
+                <div>
+                    <img src="./assets/img/receitas/prato-oriental.jpg" alt="">
+                    <h3>Prato oriental</h3>
+                    <p>Receita refrescante e cheia de vitaminas para seu café da manhã</p>
+                </div>
+                <div>
+                    <img src="./assets/img/receitas/pimentoes-a-juliana.jpg" alt="">
+                    <h3>Pimetões a juliana</h3>
+                    <p>Receita refrescante e cheia de vitaminas para seu café da manhã</p>
+                </div>
+            </section>
+            <section>
+                <h2>Quem somos</h2>
+                <p>Conheça a comunidade por trás da iniciativa</p>
+                <div>
+                    <img src="./assets/img/pessoas/roberta.jpg" alt="">
+                    <h3>Roberta</h3>
+                    <p>Conteúdo</p>
+                </div>
+                <div>
+                    <img src="./assets/img/pessoas/marcela.jpg" alt="">
+                    <h3>Marcela</h3>
+                    <p>Chef de cozinha</p>
+                </div>
+                <div>
+                    <img src="./assets/img/pessoas/andreia.jpg" alt="">
+                    <h3>Andreia</h3>
+                    <p>Pequena produtora</p>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <h3>Contato</h3>
+        </footer>
+    </body>
 </html>
