--- a/sass/index.html
+++ b/sass/index.html
@@ -28,7 +28,7 @@
 
                 <div class="textos-home">
                     <h1>Boas-vindas ao seu refúgio de <span> paz e bem-estar</span></h1>
-                    <button class="btn-main">Quero relaxar</button>
+                    <button class="btn-main">Quero relaxar!</button>
                 </div>
                 <div class="img-home">
                     <img src="./assets/home-image.png" alt="Mulher de bruços recebendo massagem nas costas">
@@ -37,12 +37,12 @@
             </section>
         </header>
         <section id="nosso-espaco">
-            <div class="detalhes">
-                <div class="imgs-espaco">
+            <div class="detalhes tecnologia">
+                <div class="imgs-tecnologia">
                     <img class="img-espaco" src="./assets/espaco-1.png"
                         alt="Espaço iluminado pelo sol com design futurista composto por piscina e plantas">
                 </div>
-                <div class="espaco-textos">
+                <div class="espaco-tecnologia">
                     <h2 class="titulo">Tecnologia e natureza potencializando seu relaxamento</h2>
                     <p class="infos">Oferecemos equipamentos de ponta, produtos certificados e uma equipe de
                         profissionais ultra qualificados para dissipar seu estresse e ajudar você na busca por
@@ -50,13 +50,13 @@
                     <img class="separador" src="./assets/separador-direita.svg" alt="separador de seções">
                 </div>
             </div>
-            <div class="detalhes">
-                <div class="imgs-espaco">
+            <div class="detalhes elevando">
+                <div class="imgs-elevando">
                     <img class="img-espaco" src="./assets/espaco-2.png"
                         alt="Mulher sentada numa banheira com uma taça na mão">
                     <img class="img-espaco" src="./assets/espaco-3.png" alt="Espaço com uma piscina e um sofá ao fundo">
                 </div>
-                <div class="espaco-textos">
+                <div class="espaco-elevando">
                     <h2 class="titulo">Elevando seu bem-estar a um novo patamar</h2>
                     <p class="infos">No Calmaria Spa cada visita é uma jornada revigorante para mais serenidade e
                         disposição! Independente da sua rotina, vamos ajudar você a encontrar seu paraíso
